<resources>
    <string name="app_name">PocketMoo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="all_movies">所有电影</string>
    <string name="good_movies">高分电影</string>
    <string name="hot_movies">热门电影</string>
    <string name="girls">所有女优</string>
    <string name="my_movies">我的电影</string>
    <string name="news">拓展阅读</string>
    <string name="my_girls">我的女优</string>
    <string name="setting">设置</string>
    <string name="feedback">反馈</string>
    <string name="update">更新</string>
    <string name="more">更多</string>
    <string name="exit_text">再按一次退出程序</string>
    <string name="avatar_name">HunterJay</string>
    <string name="avatar_sign">Good goog study,day day up!</string>

    <string name="warn_title">警告</string>
    <string name="warn_content">是否已满18岁</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="no_eighteen_tip">保卫青少年身心健康，人人有责</string>
    <string name="torrent_title">起飞?</string>
    <string name="torrent_copy">复制</string>
    <string name="cancel">取消</string>
    <string name="torrent_copied">已复制</string>

    <string name="visit_too_frequent">找种太频繁，请给鸡儿放天假</string>
    <string name="search_hint">小撸怡情</string>
    <string name="search_torrent_hint">eg:CHN-120</string>

    <string name="insert_movie">收藏</string>
    <string name="insert_success">收藏成功</string>
    <string name="insert_faile">收藏失败</string>
    <string name="insert_star_success">添加成功</string>
    <string name="insert_star_faile">添加失败</string>

    <string name="movie_star">------ 演员 ------</string>
    <string name="movie_gallery">------ 图库 ------</string>
    <string name="movie_endline">------ 底线 ------</string>

    <string name="added">已添加过</string>
    <string name="tsearcher">种子搜索器</string>
    <string name="tsearch">找种</string>
    <string name="rm_success">移除成功</string>
    <string name="rm_fail">移除失败</string>
</resources>
