<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.taisenjay.pocketmoo.ui.MovieDetailActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:minHeight="?actionBarSize"
        android:paddingTop="10dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"/>
    </android.support.v7.widget.Toolbar>

    <com.taisenjay.pocketmoo.loadingdrawable.LoadingView
        android:id="@+id/loading_drawable"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:visibility="gone"
        app:loading_renderer="WaterBottleLoadingRenderer"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_big_cover"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/img_default"/>

                    <TextView
                        android:id="@+id/tv_base_info"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:padding="5dp"
                        android:text=""
                        android:textColor="@android:color/black"
                        />

                    <TextView
                        android:id="@+id/tv_info_1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:paddingLeft="5dp"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_info_2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:paddingLeft="5dp"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_info_3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_info_4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/movie_star"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_movie_stars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/movie_gallery"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_movie_shortcuts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/movie_endline"/>

            <com.google.android.gms.ads.NativeExpressAdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:adUnitId="ca-app-pub-8800040129375841/8305381619"
                app:adSize="350x200">
            </com.google.android.gms.ads.NativeExpressAdView>

        </LinearLayout>

    </ScrollView>
</LinearLayout>

